--- a/views/panel.ejs
+++ b/views/panel.ejs
@@ -17,13 +17,17 @@
                     $(function()
                     { //DOM Ready
 
-                        freeboard.initialize(true);
-                        
-                            $.getJSON("dashboard.json", function(data) {
+                        freeboard.initialize(false, function() {
+                            
+                        });
+
+                        $.getJSON("dashboard.json", function(data) {
                                 freeboard.loadDashboard(data, function() {
-                                    freeboard.setEditing(false);
+                                    freeboard.setEditing(false,false);
                                 });
                             });
+                        
+                            
                         
                         
 
